tests/baselines/reference/declInput.errors.txt
tests/cases/compiler/declInput.ts(1,11): error TS2507: An interface cannot merge with a non-ambient class.
tests/cases/compiler/declInput.ts(5,7): error TS2506: A non-ambient class cannot be merged with an interface.


==== tests/cases/compiler/declInput.ts (2 errors) ====
    interface bar {
              ~~~
!!! error TS2507: An interface cannot merge with a non-ambient class.
    
    }
    
    class bar {
          ~~~
!!! error TS2506: A non-ambient class cannot be merged with an interface.
      public f() { return ''; }
      public g() { return {a: <bar>null, b: undefined, c: void 4 }; }
      public h(x = 4, y = null, z = '') { x++; }
    }
    